--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "@angular/platform-browser": "^6.0.0",
     "@angular/platform-browser-dynamic": "^6.0.0",
     "@angular/router": "^6.0.0",
-    "bootstrap": "^4.5.3",
+    "@ng-bootstrap/ng-bootstrap": "^9.0.2",
+    "bootstrap": "^4.6.0",
     "core-js": "^2.5.4",
     "jquery": "^3.5.1",
     "rxjs": "^6.0.0",
